<resources>
    <string name="app_name">Carteira</string>
    <string name="carteira">Carteira</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="entrada">Entrada</string>
    <string name="sa_da">Saída</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="lancamento">Lançamento</string>
    <string name="lancamentos">Lançamentos</string>
    <string name="nao_tem_cadastro_clique_aqui">Não tem cadastro, Clique aqui</string>
    <string name="saldo">Saldo</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="confirma_senha">Confirma senha</string>
    <string name="telefone">Telefone</string>
    <string name="cadastro">Cadastro</string>
</resources>