<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.MainActivity">

    <View
        android:id="@+id/viewMain"
        android:layout_width="0dp"
        android:layout_height="@dimen/nav"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carteira"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewMain"
        app:layout_constraintEnd_toEndOf="@+id/viewMain"
        app:layout_constraintStart_toStartOf="@+id/viewMain"
        app:layout_constraintTop_toTopOf="@+id/viewMain" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMain"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="@dimen/padding_input"
            android:layout_marginTop="50dp"
            android:background="@drawable/input_rounded"
            android:hint="@string/usuario"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:padding="@dimen/padding_input"
            android:background="@drawable/input_rounded"
            android:hint="@string/senha"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/buttonEntrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="15dp"
            android:text="@string/entrar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>